Change auth from email to user login
